--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ button{
 <body>
 
 <audio id="birthdayAudio" loop>
-  <source src="media/hbd.mp3" type="audio/mp3">
+  <source src="hbd.mp3" type="audio/mp3">
   Your browser does not support the audio element.
 </audio>
 
@@ -225,3 +225,4 @@ function startConfetti(){
 
 </body>
 </html>
+
