--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 }
 
 body{
+    position:relative;
     height:100vh;
     background:#0f1f1a;
     color:white;
     overflow:hidden;
-    transition:background 1.5s ease,color 1.5s ease;
+    transition:background 2.5s ease, color 2s ease;
 }
 
 body.light{
@@ -38,7 +39,7 @@ body::before{
     opacity:0;
     pointer-events:none;
     transition:opacity 1.8s ease;
-    z-index:-1;
+    z-index:0;
 }
 
 /* bila gift dibuka */
@@ -52,6 +53,8 @@ body{
 }
 
 .page{
+    position:relative;
+    z-index:1;
     display:none;
     height:100vh;
     padding:30px;
@@ -196,6 +199,13 @@ function openGift(){
 const gift = pages[i].querySelector('.sticker');
 const rect = gift.getBoundingClientRect();
 
+gift.style.transition = "transform 0.6s ease";
+gift.style.transform = "scale(1.2)";
+
+setTimeout(()=>{
+  gift.style.transform = "scale(1)";
+},600);
+
 // set titik radial ikut gift
 document.body.style.setProperty(
   '--gift-x',
@@ -265,5 +275,6 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
