--- a/index.html
+++ b/index.html
@@ -192,62 +192,44 @@ function next(){
 }
 
 function openGift(){
-  // mainkan audio
-  audio.play().catch(()=>console.log("Audio play blocked"));
+  // play audio
+  audio.play().catch(()=>{});
 
-    // dapatkan posisi gift
-const gift = pages[i].querySelector('.sticker');
-const rect = gift.getBoundingClientRect();
+  const gift = pages[i].querySelector('.sticker');
+  const rect = gift.getBoundingClientRect();
 
-gift.style.transition = "transform 0.6s ease";
-gift.style.transform = "scale(1.2)";
+  gift.style.transition = "transform 0.6s ease";
+  gift.style.transform = "scale(1.2)";
+  setTimeout(()=>gift.style.transform="scale(1)",600);
 
-setTimeout(()=>{
-  gift.style.transform = "scale(1)";
-},600);
+  // set radial origin
+  document.body.style.setProperty('--gift-x', rect.left + rect.width/2 + 'px');
+  document.body.style.setProperty('--gift-y', rect.top + rect.height/2 + 'px');
 
-// set titik radial ikut gift
-document.body.style.setProperty(
-  '--gift-x',
-  rect.left + rect.width / 2 + 'px'
-);
-document.body.style.setProperty(
-  '--gift-y',
-  rect.top + rect.height / 2 + 'px'
-);
+  // FADE PAGE 2
+  pages[i].style.transition="opacity 0.8s ease";
+  pages[i].style.opacity=0;
 
-  // tukar background + glow
-  document.body.classList.add('light');
+  // 👉 PENTING: bagi browser satu frame dulu
+  requestAnimationFrame(()=>{
+    requestAnimationFrame(()=>{
+      document.body.classList.add('light');
+      startConfetti();
+    });
+  });
 
-  // start confetti
-  startConfetti();
-
-  // fade page 2
-  pages[i].style.transition = "opacity 0.8s ease";
-  pages[i].style.opacity = 0;
-
-  // lepas fade habis, tukar page
   setTimeout(()=>{
     pages[i].classList.remove('active');
-    pages[i].style.opacity = 1; // reset opacity
-
+    pages[i].style.opacity=1;
     i++;
-    if(i < pages.length){
-      const nextPage = pages[i];
 
-      // fade-in animation untuk page 3 sahaja
-      if(i === 2){ // index page 3
-        nextPage.style.opacity = 0;
-        nextPage.classList.add('active');
-        nextPage.style.transition = "opacity 1s ease";
-        setTimeout(()=>{
-          nextPage.style.opacity = 1;
-        }, 50); // delay sikit supaya browser detect transition
-      } else {
-        nextPage.classList.add('active');
-      }
+    if(i<pages.length){
+      pages[i].style.opacity=0;
+      pages[i].classList.add('active');
+      pages[i].style.transition="opacity 1s ease";
+      setTimeout(()=>pages[i].style.opacity=1,50);
     }
-  }, 800);
+  },800);
 }
 
 
@@ -275,6 +257,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
