--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@ body::before{
     position:fixed;
     inset:0;
     background:linear-gradient(135deg,#dff5ea,#f6fffb);
+    color:#0f1f1a;
     opacity:0;
     transition:opacity 2s ease;
     pointer-events:none;
@@ -241,6 +242,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
