--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ body::before{
 body.light::before{
     opacity:1;
 }
-
+body.light{
+    color:#234;
+}
 
 /* slow global transition */
 body{
@@ -242,6 +244,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
