--- a/index.html
+++ b/index.html
@@ -188,6 +188,8 @@ function next(){
 function openGift(){
   audio.play().catch(()=>{});
 
+    startConfetti();
+
   const gift = pages[i].querySelector('.sticker');
 
   // Gift pop
@@ -244,6 +246,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
