--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@ button{
     cursor:pointer;
 }
 
+.confetti{
+    position:fixed;
+    inset:0;
+    pointer-events:none;
+    z-index:2; /* atas semua pages */
+}
+
 .confetti span{
     position:absolute;
     width:8px;
@@ -246,6 +253,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
