--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ button{
     display:flex;
     justify-content:center;
     align-items:center;
-    background:#fff; /* optional, kalau gambar ada transparency */
+    background:#fff; 
 }
 
 .sticker-frame img{
@@ -276,6 +276,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
