--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -126,6 +126,19 @@ button{
     object-fit:cover;
     display:block;
 }
+
+    .sticker-frame video{
+    width:100%;
+    height:100%;
+    object-fit:cover;
+    display:block;
+    }
+
+.sticker-frame{
+    animation:float 2.5s ease-in-out infinite;
+}
+
+    
 </style>
 </head>
 
@@ -177,7 +190,9 @@ button{
 
 <!-- PAGE 5 -->
 <div class="page">
-  <div class="sticker">😆💚</div>
+  <div class="sticker-frame">
+    <video src="page5.mp4" autoplay muted loop></video>
+  </div>
   <div class="text">
     ayat2
   </div>
@@ -276,6 +291,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
