--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ button{
     <video src="page5.mp4" autoplay muted loop></video>
   </div>
   <div class="text">
-    ayat2
+    ayat2 uuuuu
   </div>
   <button onclick="next()">Next</button>
 </div>
@@ -291,6 +291,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
