--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ button{
 
 <!-- PAGE 6 -->
 <div class="page">
-  <div class="sticker">🚗🌙</div>
+  <div class="sticker-frame">
+    <img src="IMG-20251226-WA0005.jpg" alt="Cute Image">
+  </div>
   <div class="text">
     ayat2
   </div>
@@ -293,6 +295,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
