--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ button{
     <img src="IMG-20251226-WA0005.jpg" alt="Cute Image">
   </div>
   <div class="text">
-    ayat2
+    ayat2 7
   </div>
   <button onclick="next()">Next</button>
 </div>
@@ -295,6 +295,7 @@ function startConfetti(){
 
 </body>
 </html>
+
 
 
 
