--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <!-- PAGE 1 -->
 <div class="page active">
   <div class="tenor-gif-embed" data-postid="18045411243514992895" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/peach-goma-peach-and-goma-peach-peach-cat-goma-peach-gif-18045411243514992895">Peach Goma Peach And Goma Sticker</a>from <a href="https://tenor.com/search/peach+goma-stickers">Peach Goma Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-  <h1>haiii </h1>
+  <h1>Haiii sayang kitee :3</h1>
   <button onclick="next()">Next</button>
 </div>
 
 <!-- PAGE 2 -->
 <div class="page">
   <div class="tenor-gif-embed" data-postid="16653841" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-peachcat-cute-cat-cat-happy-dance-gif-16653841">Mochi Peachcat Cute Cat Sticker</a>from <a href="https://tenor.com/search/mochi+peachcat-stickers">Mochi Peachcat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
-  <h2>I have something for you</h2>
+  <h2>Kite ada something nak cakap nii</h2>
   <button onclick="next()">Open Me!</button>
 </div>
 
@@ -45,31 +45,37 @@
 <div class="page">
   <div class="tenor-gif-embed" data-postid="23262688" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-chibi-cat-white-cat-mushy-cat-gif-23262688">Mochi Cat Chibi Cat Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <h2>yeke?</h2>
-  <button onclick="next()">IYAA</button>
-  <button class="no-btn" onmouseover="run(this)" ontouchstart="run(this)">Tak sayang</button>
+  <div class="btn-group">
+    <button onclick="next()">IYAA</button>
+    <button class="no-btn" onmouseover="run(this)" ontouchstart="run(this)">Tak sayang</button>
+  </div>
 </div>
 
 <!-- PAGE 4 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="7690912987044496021" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"></div><a href="https://tenor.com/view/mochi-cat-what-confused-gif-7690912987044496021">Mochi Cat What Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="tenor-gif-embed" data-postid="7690912987044496021" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-what-confused-gif-7690912987044496021">Mochi Cat What Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <h2>confirm?</h2>
-  <button onclick="next()">CONFIRM 1000%</button>
-  <button class="no-btn" onmouseover="run(this)" ontouchstart="run(this)">Tak AHHAH</button>
+  <div class="btn-group">
+    <button onclick="next()">CONFIRM 1000%</button>
+    <button class="no-btn" onmouseover="run(this)" ontouchstart="run(this)">Tak AHHAH</button>
+  </div>
 </div>
 
 <!-- PAGE 5 -->
 <div class="page">
-  <div class="sticker">🎁</div>
+  <div class="tenor-gif-embed" data-postid="4649696278970480223" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/bubu-dudu-sseeyall-gif-4649696278970480223">Bubu Dudu Sseeyall Sticker</a>from <a href="https://tenor.com/search/bubu+dudu-stickers">Bubu Dudu Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
   <h2>yeeeyyy nah hadiah</h2>
   <button onclick="openGift()">Buka</button>
 </div>
     
 <!-- PAGE 6 -->
 <div class="page">
-  <div class="sticker">🎂</div>
-  <h2>HAPPY BIRTHDAY </h2>
+  <div class="tenor-gif-embed" data-postid="25064044" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/hbd-gif-25064044">Hbd GIF</a>from <a href="https://tenor.com/search/hbd-gifs">Hbd GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <h2>HAPPY BIRTHDAY SAYANGGG</h2>
   <div class="text">
-   semoga itu ini
+   ayang kite dah tua dah uhuk uhuk.<br/>
+   Happy birthday sayang, kite doakan sayang sihat selalu, panjang umur, traffic light hijau & kaya HAHHAHA<br/>
+   I hope one day everything you wish will come true, and I’ll always be by your side.
   </div>
   <button onclick="next()">Next</button>
 </div>
@@ -80,7 +86,9 @@
     <img src="page4.jpg" alt="Cute Image">
   </div>
   <div class="text">
-    ayat
+   Maybe kite tak kenal lama tapi kite tahu sepanjang ayang hidup 27tahun you must’ve gone through some rough days.. <br>
+   Kite nak cakap kite bangga sangat sangat dengan ayang.<br/>
+   Congrats sayang on all your achievements for the past 27 years!!Yeeeyyyy🎉<br>
   </div>
   <button onclick="next()">Next</button>
 </div>
@@ -91,29 +99,35 @@
     <video src="VID_20260103_013754.mp4" autoplay muted loop playsinline></video>
   </div>
   <div class="text">
-    ayat2 uuuuu
+   Lastly thank you sayang sebab selalu usaha buat kita happy. Terima kasih sayang sanggup datang jauh-jauh, tak mengeluh, tak berkira & layan je apa kite nak hehe.
+  Kite mintak maaf kalau sometimes kite tak dapat control emotion kite sampai termarah ayang. Terima kasih sebab tak pernah naik suara kat kite atau maki kite.
+  Ayang dah cukup perfect kite sayang ayanggg.
+  If one day we have a big fight, kita fix balik tau sayang. Selagi tak melibatkan orang ketiga kita try fix sama-sama. Jangan pernah give up dengan kite tauuu.
+  Thank you sayang for everything you did for our relationship. MELOVEYOUUU!! 💚
   </div>
-  <button onclick="next()">Next</button>
+  <button onclick="next()">Habis</button>
 </div>
 
 <!-- PAGE 9 -->
 <div class="page">
   <div class="sticker-frame">
-    <img src="IMG-20251226-WA0005.jpg" alt="Cute Image">
+    <img src="kimi2.jpg" alt="Cute Image">
   </div>
   <div class="text">
-    ayat2 7
+    Tapi boong HAHAHA bonuss HAHAHAH COMEEEELLL ok ok last bye sayang heheh
   </div>
-  <button onclick="next()">Next</button>
+  <button onclick="next()">End</button>
 </div>
 
 <!-- PAGE 10 -->
 <div class="page">
-  <div class="sticker">💖🎂</div>
-  <div class="text">
-    ayat3
+  <div class="sticker-frame">
+    <img src="kimi3.jpg" alt="Cute Image">
   </div>
-  <button onclick="reset()">End</button>
+  <div class="text">
+    ayang encem aum :3
+  </div>
+  <button onclick="reset()">bye cayang:3</button>
 </div>
 
 <script>
@@ -131,42 +145,34 @@ function next(){
     
 function openGift(){
   audio.play().catch(()=>{});
-
-    startConfetti();
-
-  const gift = pages[i].querySelector('.sticker');
-
-  // Gift pop
-  gift.style.transition = "transform 0.6s ease";
-  gift.style.transform = "scale(1.2)";
-  setTimeout(()=>gift.style.transform="scale(1)",600);
+  startConfetti();
 
   // Fade PAGE 5 dulu
-  pages[i].style.transition="opacity 1s ease";
-  pages[i].style.opacity=0;
+  pages[i].style.transition = "opacity 1s ease";
+  pages[i].style.opacity = 0;
 
-  // Background fade AFTER page start fade
+  // Background fade
   setTimeout(()=>{
     document.body.classList.add('light');
   },300);
 
-  // Switch page
+  // Switch ke page seterusnya
   setTimeout(()=>{
     pages[i].classList.remove('active');
-    pages[i].style.opacity=1;
+    pages[i].style.opacity = 1;
     i++;
 
-    if(i<pages.length){
-      pages[i].style.opacity=0;
+    if(i < pages.length){
+      pages[i].style.opacity = 0;
       pages[i].classList.add('active');
-      pages[i].style.transition="opacity 1.2s ease";
-      setTimeout(()=>pages[i].style.opacity=1,50);
+      pages[i].style.transition = "opacity 1.2s ease";
+      setTimeout(()=>pages[i].style.opacity = 1,50);
     }
   },1000);
 }
 
 
-
+//end button
 function reset(){
   pages[i].classList.remove('active');
   i = 0;
@@ -175,9 +181,10 @@ function reset(){
   document.querySelector('.confetti').innerHTML='';
 }
 
+//confetti
 function startConfetti(){
   const box=document.querySelector('.confetti');
-  box.innerHTML=''; // clear first
+  box.innerHTML='';
   for(let j=0;j<60;j++){
     let c=document.createElement('span');
     c.style.left=Math.random()*100+'%';
@@ -186,6 +193,7 @@ function startConfetti(){
   }
 }
 
+//running button
 function run(btn){
   const maxX = window.innerWidth - btn.offsetWidth;
   const maxY = window.innerHeight - btn.offsetHeight;
