--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 
 <!-- PAGE 1 -->
 <div class="page active">
-  <div class="tenor-gif-embed" data-postid="18045411243514992895" data-share-method="host" data-aspect-ratio="1.2" data-width="400px"><a href="https://tenor.com/view/peach-goma-peach-and-goma-peach-peach-cat-goma-peach-gif-18045411243514992895">Peach Goma Peach And Goma Sticker</a>from <a href="https://tenor.com/search/peach+goma-stickers">Peach Goma Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="18045411243514992895" data-share-method="host" data-aspect-ratio="1.2" data-width="400px"><a href="https://tenor.com/view/peach-goma-peach-and-goma-peach-peach-cat-goma-peach-gif-18045411243514992895">Peach Goma Peach And Goma Sticker</a>from <a href="https://tenor.com/search/peach+goma-stickers">Peach Goma Stickers</a></div>
+  </div>
   <h1>Haiii sayang kitee :3</h1>
   <button onclick="next()">Next</button>
 </div>
@@ -207,10 +209,11 @@ function run(btn){
 }
 
 </script>
-
+<script type="text/javascript" async src="https://tenor.com/embed.js"></script>
 
 </body>
 </html>
+
 
 
 
