--- a/index.html
+++ b/index.html
@@ -28,14 +28,18 @@
 
 <!-- PAGE 2 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="16653841" data-share-method="host" data-aspect-ratio="1.2" data-width="300px"><a href="https://tenor.com/view/mochi-peachcat-cute-cat-cat-happy-dance-gif-16653841">Mochi Peachcat Cute Cat Sticker</a>from <a href="https://tenor.com/search/mochi+peachcat-stickers">Mochi Peachcat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="16653841" data-share-method="host" data-aspect-ratio="1.2" data-width="300px"><a href="https://tenor.com/view/mochi-peachcat-cute-cat-cat-happy-dance-gif-16653841">Mochi Peachcat Cute Cat Sticker</a>from <a href="https://tenor.com/search/mochi+peachcat-stickers">Mochi Peachcat Stickers</a></div> 
+  </div>
   <h2>Kite ada something nak cakap nii</h2>
   <button onclick="next()">Open Me!</button>
 </div>
 
 <!-- PAGE 3 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="14398926373831065128" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/peach-cat-peachy-gif-14398926373831065128">Peach Cat Peachy Sticker</a>from <a href="https://tenor.com/search/peach+cat-stickers">Peach Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="14398926373831065128" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/peach-cat-peachy-gif-14398926373831065128">Peach Cat Peachy Sticker</a>from <a href="https://tenor.com/search/peach+cat-stickers">Peach Cat Stickers</a></div>
+  </div>
   <h2>Tapi ayang sayang kite tak?</h2>
   <div class="btn-group">
     <button onclick="next()">Sayangg</button>
@@ -45,7 +49,9 @@
 
 <!-- PAGE 4 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="23262688" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-chibi-cat-white-cat-mushy-cat-gif-23262688">Mochi Cat Chibi Cat Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="23262688" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-chibi-cat-white-cat-mushy-cat-gif-23262688">Mochi Cat Chibi Cat Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> 
+  </div>
   <h2>yeke?</h2>
   <div class="btn-group">
     <button onclick="next()">IYAA</button>
@@ -55,7 +61,9 @@
 
 <!-- PAGE 4 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="7690912987044496021" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-what-confused-gif-7690912987044496021">Mochi Cat What Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="7690912987044496021" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/mochi-cat-what-confused-gif-7690912987044496021">Mochi Cat What Sticker</a>from <a href="https://tenor.com/search/mochi+cat-stickers">Mochi Cat Stickers</a></div> 
+  </div>
   <h2>confirm?</h2>
   <div class="btn-group">
     <button onclick="next()">CONFIRM 1000%</button>
@@ -65,14 +73,18 @@
 
 <!-- PAGE 5 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="4649696278970480223" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/bubu-dudu-sseeyall-gif-4649696278970480223">Bubu Dudu Sseeyall Sticker</a>from <a href="https://tenor.com/search/bubu+dudu-stickers">Bubu Dudu Stickers</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="4649696278970480223" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/bubu-dudu-sseeyall-gif-4649696278970480223">Bubu Dudu Sseeyall Sticker</a>from <a href="https://tenor.com/search/bubu+dudu-stickers">Bubu Dudu Stickers</a></div> 
+  </div>
   <h2>yeeeyyy nah hadiah</h2>
   <button onclick="openGift()">Buka</button>
 </div>
     
 <!-- PAGE 6 -->
 <div class="page">
-  <div class="tenor-gif-embed" data-postid="25064044" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/hbd-gif-25064044">Hbd GIF</a>from <a href="https://tenor.com/search/hbd-gifs">Hbd GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+  <div class="gif">
+    <div class="tenor-gif-embed" data-postid="25064044" data-share-method="host" data-aspect-ratio="1.2" data-width="220px"><a href="https://tenor.com/view/hbd-gif-25064044">Hbd GIF</a>from <a href="https://tenor.com/search/hbd-gifs">Hbd GIFs</a></div> 
+  </div>
   <h2>HAPPY BIRTHDAY SAYANGGG</h2>
   <div class="text">
    ayang kite dah tua dah uhuk uhuk.<br/>
@@ -213,6 +225,7 @@ function run(btn){
 
 </body>
 </html>
+
 
 
 
