--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Happy Birthday Sayang 💚</title>
+  <link rel="stylesheet" href="style.css?v=1.1"/>
   <link rel="stylesheet" href="style.css"/>
 </head>
 
@@ -225,6 +226,7 @@ function run(btn){
 
 </body>
 </html>
+
 
 
 
